apps/proxy/squid-opaque.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: squid-opaque
spec:
  replicas: 1
  selector:
    matchLabels:
      app: squid-opaque
  template:
    metadata:
      labels:
        app: squid-opaque
    spec:
      containers:
        - image: ghcr.io/cybozu/squid-dev:7.5.0.2
          name: squid
          command:
            - squid
            - -N
            - -f
            - /etc/squid/squid.conf
          volumeMounts:
            - name: config
              mountPath: /etc/squid
              readOnly: true
      nodeSelector:
        kubernetes.io/hostname: kind-worker
      volumes:
        - name: config
          configMap:
            name: squid-opaque
---
apiVersion: v1
kind: Service
metadata:
  name: squid-opaque
spec:
  selector:
    app: squid-opaque
  ports:
    - appProtocol: TCP
      port: 3128
