apps/proxy/squid.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: squid
spec:
  replicas: 1
  selector:
    matchLabels:
      app: squid
  template:
    metadata:
      labels:
        app: squid
    spec:
      containers:
        - image: ghcr.io/cybozu/squid-dev:7.5.0.2
          name: squid
          command:
            - squid
            - -Nf
            - /etc/squid/squid.conf
          volumeMounts:
            - name: config
              mountPath: /etc/squid
              readOnly: true
            - name: mitm
              mountPath: /etc/squid/ssl_cert
              readOnly: true
            - name: chain
              mountPath: /chain
            - name: cache
              mountPath: /var/spool/squid
              readOnly: false
      nodeSelector:
        kubernetes.io/hostname: kind-worker
      securityContext:
        runAsUser: 13
        runAsGroup: 13
        runAsNonRoot: true
      volumes:
        - name: config
          configMap:
            name: squid
        - name: mitm
          secret:
            secretName: squid-mitm
        - name: chain
          hostPath:
            path: /node/deck/
        - name: cache
          hostPath:
            path: /node/squid/
---
apiVersion: v1
kind: Service
metadata:
  name: squid
spec:
  selector:
    app: squid
  ports:
    # Sidecar Envoy is going to try interpreting HTTP CONNECT without appProtocol
    # https://istio.io/latest/docs/ops/configuration/traffic-management/protocol-selection/
    - appProtocol: TCP
      port: 3128
      nodePort: 30128
  type: NodePort
