apps/proxy/service-entry.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: squid
spec:
  hosts:
    - squid.proxy.svc.cluster.local
  ports:
    - number: 3128
      name: tcp
      protocol: TCP
  location: MESH_EXTERNAL
  resolution: STATIC
